...
                                <rect key="frame" x="246" y="169" width="108" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="JW7-JS-V3g"/>
                                    <constraint firstAttribute="width" constant="108" id="f4r-Ix-h4v"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Iniciar Sesión"/>
                                <connections>
                                    <action selector="iniciarSesionStoryID:" destination="czw-iR-kd8" eventType="touchUpInside" id="gIj-07-Db2"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Usuario" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zS0-0B-dMr">
                                <rect key="frame" x="238" y="72" width="125" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="125" id="has-L2-XUG"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no"/>
...
                                <rect key="frame" x="268" y="197" width="65" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="a28-7L-RGx"/>
                                    <constraint firstAttribute="width" constant="65" id="ktS-tT-fuG"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Limpiar"/>
                                <connections>
                                    <action selector="limpiar:" destination="czw-iR-kd8" eventType="touchUpInside" id="863-aU-ptd"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKq-kl-8X1">
                                <rect key="frame" x="279" y="148" width="42" height="21"/>
...
                                    <constraint firstAttribute="height" constant="21" id="Rt6-Wi-IUz"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="1" green="0.061523099769999999" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contraseña" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pUn-Wf-gl9">
                                <rect key="frame" x="238" y="110" width="125" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                <connections>
                                    <action selector="editar:" destination="czw-iR-kd8" eventType="editingDidBegin" id="S65-6T-vbo"/>
                                    <action selector="editar:" destination="czw-iR-kd8" eventType="editingChanged" id="pTM-J5-LEF"/>
...
                    <view key="view" contentMode="scaleToFill" id="Qbo-2y-EaV">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="agf-81-cwH">
                                <rect key="frame" x="279" y="205" width="43" height="30"/>
                                <state key="normal" title="Volver"/>
                                <connections>
                                    <action selector="volver:" destination="qXC-GP-xuy" eventType="touchUpInside" id="st1-t6-Ymm"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhh-3y-fjx">
                                <rect key="frame" x="265" y="290" width="71" height="30"/>
                                <state key="normal" title="Reordenar"/>
                                <connections>
                                    <action selector="reordenarUsuarios:" destination="qXC-GP-xuy" eventType="touchUpInside" id="HQ4-iI-wJj"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkc-Nb-GRv">
                                <rect key="frame" x="279" y="338" width="42" height="21"/>
...
